src/test/ui/parser/lex-bad-token.stderr
error: unknown start of token: /u{25cf}
  --> $DIR/lex-bad-token.rs:3:1
   |
LL | ● //~ ERROR: unknown start of token
   | ^

error: aborting due to previous error

