src/test/ui/parser/lex-bad-token.rs
// compile-flags: -Z parse-only

â— //~ ERROR: unknown start of token
